Cambio de nombre del archivo javascript a game.js

--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
         </section>
     </main>
 
-    <script src="assets/js/element-dinamics.js"></script>
+    <script src="assets/js/game.js"></script>
 </body>
 </html>
